# numake

./: .gitignore  Cargo.toml  LICENSE.txt  build.rs  readme.md  rustfmt.toml
.github/workflows/: rust.yml
examples/: main.cpp  project.numake
examples/sdl2/: main.cpp  project.lua  project.numake
examples/test/: main.cpp  test.lua  test.numake
examples/test/src/: main.cpp
src/: cache.rs  cli_args.rs  config.rs  error.rs  generic_target.rs  lua_file.rs  lua_workspace.rs  main.rs  msvc_target.rs  numake_file.rs  project.rs  target.rs  targets.rs  ui.rs  util.rs  workspace.rs
src/lib/: cache.rs  cli_args.rs  error.rs  mod.rs  ui.rs  util.rs  workspace.rs
src/lib/cli/: list_args.rs  mod.rs  numake_args.rs  sub_commands.rs
src/lib/compilers/: generic.rs  mingw.rs  mod.rs  msvc.rs
src/lib/data/: environment.rs  flag_type.rs  mod.rs  project.rs  project_language.rs  project_type.rs  source_file_collection.rs  source_file_type.rs
src/lib/init/: mod.rs
src/lib/runtime/: filesystem.rs  mod.rs  network.rs  storage.rs  system.rs  task_manager.rs
src/lib/ui/: mod.rs
src/lib/ui/format/: default.rs  error.rs  info.rs  mod.rs  ok.rs
src/lib/util/: build_cache.rs  cache.rs  either.rs  error.rs  mod.rs
src/targets/: custom_target.rs  generic_target.rs  mingw_target.rs  msvc_target.rs  target.rs
