[package]
name = "numake"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86" }
base64 = "0.22.1"
clap = { version = "4.5.7", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
dunce = { version = "1.0.4" }
encoding_rs = "0.8.34"
indicatif = "0.17.8"
mlua = { version = "0.10.1", features = ["vendored", "luau", "luau-jit"] }
pathdiff = { version = "0.2.1" }
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117" }
sha256 = "1.5.0"
strum = "0.26.3"
strum_macros = "0.26.4"
tempfile = { version = "3.10.1" }
thiserror = "2.0.3"
toml = { version = "0.8.14" }
which = "7.0.0"
zip = { version = "2.1.3", features = [
    "deflate-zlib-ng",
    "deflate-zopfli",
    "zstd",
    "lzma",
    "bzip2",
    "time",
    "deflate64",
    "aes-crypto",
] }
