[package]
name = "numake"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.95" }
base64 = "0.22.1"
bzip2 = "0.5.0"
clap = { version = "4.5.23", features = ["derive"] }
console = "0.15.10"
dialoguer = "0.11.0"
dunce = { version = "1.0.5" }
encoding_rs = "0.8.34"
indicatif = "0.17.9"
mlua = { version = "0.10.2", features = ["vendored", "anyhow", "luau-jit", "userdata-wrappers"] }
pathdiff = { version = "0.2.3" }
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135" }
sha256 = "1.5.0"
strum = "0.26.3"
strum_macros = "0.26.4"
tempfile = { version = "3.15.0" }
thiserror = "2.0.9"
toml = { version = "0.8.19" }
zip = { version = "2.2.2", features = [
    "deflate-zlib-ng",
    "deflate-zopfli",
    "zstd",
    "lzma",
    "bzip2",
    "time",
    "deflate64",
    "aes-crypto",
] }
